# FindIt

./: package-lock.json  package.json
client/: package-lock.json  package.json
client/src/: App.tsx
client/src/components/: room.tsx
server/: .env  Cargo.toml  README.md  apartment_mock.json  justfile
server/src/: main.rs
src/: types.ts
src/components/: apartment.tsx  item.tsx
